# journal-core

./: .env  .gitignore  Cargo.toml  Design.md  Dockerfile  README.md
example_posts/: 202004-simd.md
src/: db.rs  lib.rs  main.rs  markdown_processor.rs  models.rs
src/api/handlers/: mod.rs  post_handler.rs
src/cli/: commands.rs  markdown_processor.rs  mod.rs
src/common/: db.rs  models.rs
src/handlers/: asset_handler.rs  post_handler.rs
