[package]
name = "journal-core"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
deadpool-postgres = "0.14.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.23", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = "0.7.14"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
