[package]
name = "journal-core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/bin/api.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[lib]
name = "journal_core"
path = "src/lib.rs"

[dependencies]
# web API
actix-files = "0.6.8"
actix-web = "4.11.0"
actix-cors = "0.7.1"

# database
tokio-postgres = { version = "0.7.14", features = ["with-uuid-1", "with-time-0_3"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# general lib
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
dotenvy = "0.15.7"
deadpool-postgres = "0.14.1"

# markdown process
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.23", features = ["stream"] }
url = "2.5.7"
mime = "0.3"
futures-util = "0.3.31"
sha2 = "0.10.9"

# cli
clap = { version = "4.5.11", features = ["derive"] }
